# graduation_thesis_gel_system

./: LICENSE  README.md
from_gel/: package.xml  setup.cfg  setup.py
from_gel/from_gel/: goal_generator.py  ina219_plotter.py  robot_controller.py
gel_interfaces/: CMakeLists.txt  package.xml
gel_interfaces/action/: VisionCommand.action
rpi_controller/: package.xml  setup.cfg  setup.py
rpi_controller/rpi_controller/: gel_controller.py  gel_controller_yolov8.py
to_gel/: package.xml  setup.cfg  setup.py
to_gel/to_gel/: task_manager.py  vision_server.py  yolov8_task_manager.py  yolov8_vision_server.py
