<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>to_gel</name>
  <version>0.0.0</version>
  <description>Object detection and stimulation control package (Version 2)</description>
  <maintainer email="rr0151si@ed.ritsumei.ac.jp">neya</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>tf2_ros</depend>
  <depend>cv_bridge</depend>
  <depend>action_msgs</depend>

  <depend>gel_interfaces</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
